--- a/src/app/components/student-table/student-table.component.html
+++ b/src/app/components/student-table/student-table.component.html
@@ -1,1 +1,47 @@
-<p>student-table works!</p>
+<table mat-table [dataSource]="studentsData()" class="students-table">
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef> E-mail </th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
+  <ng-container matColumnDef="cellPhoneNumber">
+    <th mat-header-cell *matHeaderCellDef> Celular </th>
+    <td mat-cell *matCellDef="let element"> {{element.cellPhoneNumber}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="phoneNumber">
+    <th mat-header-cell *matHeaderCellDef> Telefone </th>
+    <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="cpf">
+    <th mat-header-cell *matHeaderCellDef> CPF </th>
+    <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
+  </ng-container>
+  <ng-container matColumnDef="birthDate">
+    <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+    <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="actions-column"> Ações </th>
+    <td mat-cell *matCellDef="let element" class="actions-column">
+      <div class="actions-container">
+        <button class="action-buttons" (click)="updateStudent(element)">
+          <mat-icon fontIcon="edit" class="edit-icon"></mat-icon>
+        </button>
+        <button class="action-buttons" (click)="deleteStudent(element.id)">
+          <mat-icon fontIcon="delete" class="delete-icon"></mat-icon>
+        </button>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
