--- a/src/app/components/student-form/student-form.component.html
+++ b/src/app/components/student-form/student-form.component.html
@@ -48,7 +48,7 @@
         matInput
         formControlName="cellPhoneNumber"
         inputmode="tel"
-        mask="(00) 00000-0000"
+        mask="(00) 0000-0000||(00) 00000-0000"
         placeholder="(00) 00000-0000"
         [dropSpecialCharacters]="false"
       >
