feat: implementa navegacao ao formulario ao clicar em 'editar aluno'

--- a/src/app/pages/student/student.component.html
+++ b/src/app/pages/student/student.component.html
@@ -1,4 +1,4 @@
-<main class="main-content">
+<main id="top-page" class="main-content">
   <section class="student-form-container">
     <h3 class="title">Novo Aluno</h3>
     <app-student-form />
