--- a/src/app/components/student-table/student-table.component.html
+++ b/src/app/components/student-table/student-table.component.html
@@ -32,9 +32,11 @@
     <th mat-header-cell *matHeaderCellDef class="actions-column"> Ações </th>
     <td mat-cell *matCellDef="let element" class="actions-column">
       <div class="actions-container">
-        <button class="action-buttons" (click)="updateStudent(element)">
-          <mat-icon fontIcon="edit" class="edit-icon"></mat-icon>
-        </button>
+        <a href="#top-page">
+          <button class="action-buttons" (click)="updateStudent(element)">
+            <mat-icon fontIcon="edit" class="edit-icon"></mat-icon>
+          </button>
+        </a>
         <button class="action-buttons" (click)="deleteStudent(element.id)">
           <mat-icon fontIcon="delete" class="delete-icon"></mat-icon>
         </button>
