--- a/src/app/components/student-form/student-form.component.html
+++ b/src/app/components/student-form/student-form.component.html
@@ -85,6 +85,12 @@
     </mat-form-field>
   </div>
 
+  @if(messageCardOptions()) {
+    <div class="form-row">
+      <app-message-card [options]="messageCardOptions()"></app-message-card>
+    </div>
+  }
+
   <div class="form-row form-row-actions">
     <button type="reset" class="cancel-button" mat-flat-button (click)="isUpdatingStudent() ? cancelUpdating() : null">
       <mat-icon fontIcon="cancel"></mat-icon>
