--- a/src/app/components/student-table/student-table.component.html
+++ b/src/app/components/student-table/student-table.component.html
@@ -45,5 +45,5 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.row-updating]="isRowUpdating(row)"></tr>
 </table>
